Sutter Health/src/objects/Communication_Log__c.object
<CustomObject>
    <description>Communication log is used to record the Outreach/call details when Outreach staff attempts to contact patient on Pre-visit plan / Gaps in Care.</description>
    <fields>
        <fullName>AIM_patient__c</fullName>
        <description>AIM patient</description>
        <label>AIM patient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AQRS_Reference_Id__c</fullName>
        <label>AQRS Reference Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMI__c</fullName>
        <description>BMI</description>
        <label>BMI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_result__c</fullName>
        <description>Call Result</description>
        <label>Call result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not available</fullName>
                </value>
                <value>
                    <fullName>No Answer/Busy</fullName>
                </value>
                <value>
                    <fullName>Left Message</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Reminder rule failed</fullName>
                </value>
                <value>
                    <fullName>Duplicate reminder</fullName>
                </value>
                <value>
                    <fullName>Delivery type mismatch</fullName>
                </value>
                <value>
                    <fullName>No email address on file</fullName>
                </value>
                <value>
                    <fullName>Missing or Invalid Number</fullName>
                </value>
                <value>
                    <fullName>Incomplete setup to send messages</fullName>
                </value>
                <value>
                    <fullName>Patient updates disabled</fullName>
                </value>
                <value>
                    <fullName>Duplicate update</fullName>
                </value>
                <value>
                    <fullName>Patient not accepting updates</fullName>
                </value>
                <value>
                    <fullName>Patient is not signed up for updates</fullName>
                </value>
                <value>
                    <fullName>Sent to Communication Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_time__c</fullName>
        <description>Call time</description>
        <label>Call time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments_Spoke_with_Patient__c</fullName>
        <description>LEFT MESSAGE/SPOKE WITH PATIENT - comments</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Contact Name</description>
        <inlineHelpText>Patient Name</inlineHelpText>
        <label>Patient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_method__c</fullName>
        <description>Contact method</description>
        <label>Contact method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Patient Portal Message</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contacted_About__c</fullName>
        <description>Contacted About</description>
        <label>Contacted About</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_year_AWV_date__c</fullName>
        <description>Current year AWV date (blank if none yet)</description>
        <label>Current year AWV date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_Care_Center__c</fullName>
        <label>Department (Care Center)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <label>Department ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dialed_Phone__c</fullName>
        <description>Dialed Phone Number</description>
        <label>Phone # dialed</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPN Network</fullName>
                </value>
                <value>
                    <fullName>Mills Peninsula</fullName>
                </value>
                <value>
                    <fullName>SPMF LAKE DIVISION</fullName>
                </value>
                <value>
                    <fullName>SPMF SONOMA DIVISION</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Documentation_Note__c</fullName>
        <description>Documentation Note (HNO)</description>
        <label>Documentation Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPIC_Error_Id__c</fullName>
        <label>EPIC Error Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPIC_Reference__c</fullName>
        <description>EPIC Reference Number</description>
        <label>EPIC Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPIC_Response_Message__c</fullName>
        <description>EPIC Response Message</description>
        <label>EPIC Response Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EPIC_Sync_Date__c</fullName>
        <description>EPIC Sync Date</description>
        <label>EPIC Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Encounter_Date__c</fullName>
        <description>Encounter Date</description>
        <label>Encounter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Epic_Patient_ID__c</fullName>
        <label>Epic Patient ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <label>Facility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SEBMF</fullName>
                </value>
                <value>
                    <fullName>SGMF</fullName>
                </value>
                <value>
                    <fullName>SMF</fullName>
                </value>
                <value>
                    <fullName>SPMF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Foundation__c</fullName>
        <label>Foundation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EAST BAY PHYSICIANS MEDICAL GROUP</fullName>
                </value>
                <value>
                    <fullName>GOULD MEDICAL GROUP</fullName>
                </value>
                <value>
                    <fullName>PALO ALTO MEDICAL FOUNDATION</fullName>
                </value>
                <value>
                    <fullName>SUTTER MEDICAL GROUP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initials__c</fullName>
        <formula>$User.FirstName&amp;&quot; &quot;&amp;$User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initials</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Letter_Sent_Date__c</fullName>
        <description>Letter Sent Date</description>
        <label>Letter Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MHO_MESSAGE_SENT__c</fullName>
        <description>MHO MESSAGE SENT?</description>
        <label>MHO MESSAGE SENT?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MHO_Message_Sent_Date__c</fullName>
        <description>MHO Message Sent Date</description>
        <label>MHO Message Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Measure__c</fullName>
        <label>Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Diabetes mellitus</fullName>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Congestive heart failure</fullName>
                </value>
                <value>
                    <fullName>Chronic kidney disease</fullName>
                </value>
                <value>
                    <fullName>Obesity</fullName>
                </value>
                <value>
                    <fullName>Preventive Screening</fullName>
                </value>
                <value>
                    <fullName>Immunizations</fullName>
                </value>
                <value>
                    <fullName>Coronary artery disease</fullName>
                </value>
                <value>
                    <fullName>Chronic liver disease</fullName>
                </value>
                <value>
                    <fullName>Chronic obstructive pulmonary disease</fullName>
                </value>
                <value>
                    <fullName>Cystic fibrosis</fullName>
                </value>
                <value>
                    <fullName>HIV/AIDS</fullName>
                </value>
                <value>
                    <fullName>Osteoporosis</fullName>
                </value>
                <value>
                    <fullName>Cervical Cancer Screening</fullName>
                </value>
                <value>
                    <fullName>Breast Cancer Screening</fullName>
                </value>
                <value>
                    <fullName>Colorectal Cancer Screening</fullName>
                </value>
                <value>
                    <fullName>Tobacco Cessation Counseling</fullName>
                </value>
                <value>
                    <fullName>Tetanus, diphtheria, pertussis</fullName>
                </value>
                <value>
                    <fullName>Human papillomavirus</fullName>
                </value>
                <value>
                    <fullName>Meningococcal</fullName>
                </value>
                <value>
                    <fullName>Influenza</fullName>
                </value>
                <value>
                    <fullName>Pneumococcal</fullName>
                </value>
                <value>
                    <fullName>Hepatitis A</fullName>
                </value>
                <value>
                    <fullName>Hepatitis B</fullName>
                </value>
                <value>
                    <fullName>Inactivated poliovirus</fullName>
                </value>
                <value>
                    <fullName>Measles, mumps, rubella</fullName>
                </value>
                <value>
                    <fullName>Varicella</fullName>
                </value>
                <value>
                    <fullName>Rotavirus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Need_Reminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Appointment_Type__c</fullName>
        <label>Next Appointment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Patient Portal Message</fullName>
                </value>
                <value>
                    <fullName>Telephone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Planned_Appointment__c</fullName>
        <label>Next Planned Appointment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_contact_Date__c</fullName>
        <label>Next Followup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_contacts__c</fullName>
        <description>Number of contacts</description>
        <label>Number of contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Optum_Form__c</fullName>
        <description>Optum Form</description>
        <label>Optum Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Call__c</fullName>
        <label>Outreach Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AWV</fullName>
                </value>
                <value>
                    <fullName>Gap in Care</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Pre-Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outreach Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Communication_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCP__c</fullName>
        <description>PCP - Provider Information</description>
        <label>PCP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EVANS, NANCY</fullName>
                </value>
                <value>
                    <fullName>FISH, JENNIFER CECILIA MD</fullName>
                </value>
                <value>
                    <fullName>FARNER, STEVEN HOWARD</fullName>
                </value>
                <value>
                    <fullName>FIRTH, THOMAS ALAN</fullName>
                </value>
                <value>
                    <fullName>SARINGAN, GEMMA MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Committed_to_Measure__c</fullName>
        <description>Patient Committed to Measure Outreach</description>
        <label>Patient Committed to Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_MRN__c</fullName>
        <description>Patient MRN</description>
        <label>Patient MRN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Moved__c</fullName>
        <description>Patient Moved</description>
        <label>Patient Moved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Outreach_Complete__c</fullName>
        <label>Patient Outreach Complete</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_died__c</fullName>
        <description>Patient died</description>
        <label>Patient died</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Type_I_CAL_90__c</fullName>
        <label>Phone Type (I CAL 90)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Pager</fullName>
                </value>
                <value>
                    <fullName>Home Fax</fullName>
                </value>
                <value>
                    <fullName>Other Fax</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>TTY</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
                <value>
                    <fullName>Video Phone</fullName>
                </value>
                <value>
                    <fullName>Walkie Talkie</fullName>
                </value>
                <value>
                    <fullName>Txt Reminder</fullName>
                </value>
                <value>
                    <fullName>JDM Comm</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physician_Type__c</fullName>
        <label>Physician Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_year_AWV_date__c</fullName>
        <description>Prior year AWV date</description>
        <label>Prior year AWV date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <label>Provider ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QI_confirmed__c</fullName>
        <description>QI confirmed?</description>
        <label>QI confirmed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Call__c</fullName>
        <defaultValue>&quot;201 - Health Maintenance&quot;</defaultValue>
        <description>Reason for Call</description>
        <label>Reason for Call</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_the_Patient__c</fullName>
        <label>Relationship to the Patient</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Brother</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>On Call Provider</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Relative</fullName>
                </value>
                <value>
                    <fullName>Sister</fullName>
                </value>
                <value>
                    <fullName>Uncle</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Significant Other</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Guardian</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Grandchild</fullName>
                </value>
                <value>
                    <fullName>Niece/Nephew</fullName>
                </value>
                <value>
                    <fullName>Coworker/Associate</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>PCP</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Radiology</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
                <value>
                    <fullName>Carrier</fullName>
                </value>
                <value>
                    <fullName>Employer Group</fullName>
                </value>
                <value>
                    <fullName>Network</fullName>
                </value>
                <value>
                    <fullName>Provider</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Payor</fullName>
                </value>
                <value>
                    <fullName>Interpreter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reminder_Activity_Date__c</fullName>
        <description>Reminder Activity Date</description>
        <label>Reminder Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_MHO_Letter__c</fullName>
        <description>Sent MHO/Letter</description>
        <label>Sent MHO/Letter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <description>Speciality</description>
        <label>Speciality</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cardiac</fullName>
                </value>
                <value>
                    <fullName>Nuero</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <description>Status Date</description>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appointment scheduled</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Insurance termed</fullName>
                </value>
                <value>
                    <fullName>Moved</fullName>
                </value>
                <value>
                    <fullName>Moved out of state</fullName>
                </value>
                <value>
                    <fullName>Patient Committed to Service</fullName>
                </value>
                <value>
                    <fullName>Patient Declined</fullName>
                </value>
                <value>
                    <fullName>Transferred care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telephone_encounter_created__c</fullName>
        <label>Telephone encounter created?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upcoming_Visit_Provider__c</fullName>
        <description>Upcoming Visit Provider</description>
        <label>Next Visit Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EVANS, NANCY</fullName>
                </value>
                <value>
                    <fullName>FARNER, STEVEN HOWARD</fullName>
                </value>
                <value>
                    <fullName>FIRTH, THOMAS ALAN</fullName>
                </value>
                <value>
                    <fullName>FISH, JENNIFER CECILIA MD</fullName>
                </value>
                <value>
                    <fullName>SARINGAN, GEMMA MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upcoming_visit_apt_time__c</fullName>
        <description>Upcoming visit apt time</description>
        <label>Next Visit Appt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <defaultValue>$User.Alias</defaultValue>
        <label>User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Communication Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Call_result__c</columns>
        <columns>Foundation__c</columns>
        <columns>Encounter_Date__c</columns>
        <columns>Reminder_Activity_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CL-{00000}</displayFormat>
        <label>Communication Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>